adding stars just for ambience

--- a/style.css
+++ b/style.css
@@ -61,3 +61,10 @@ input {
     text-align: center;
 }
 
+.star {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: white;
+    border-radius: 50%;
+}
