--- a/style.css
+++ b/style.css
@@ -1,70 +1,107 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: radial-gradient(#004e92,#000428);
-    background-size: cover;
-
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background: radial-gradient(#004e92, #000428);
+  background-size: cover;
 }
 
 .container {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
-    color: white;
-    margin: 0px 30px;
-    font-size: 3rem;
+  color: white;
+  margin: 0px 30px;
+  font-size: 3rem;
 }
 
 form {
-    display: flex;
-    gap: 20px
+  display: flex;
+  gap: 20px;
 }
 
-input {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.5rem;
-    background: transparent;
-    border: solid white 1px;
-    padding: 10px;
-    color: white;
-    width: 30vw;
-}
 #start-btn {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.2rem;
-    background: white;
-    border: solid white 1px;
-    padding: 10px;
-    color: #000428;
-    cursor: pointer;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 1.2rem;
+  background: white;
+  border: solid white 1px;
+  padding: 10px;
+  color: #000428;
+  cursor: pointer;
 
-    &:hover {
-        background-color: transparent;
-        color: white
-    }
+  &:hover {
+    background-color: transparent;
+    color: white;
+  }
 }
 
 #horoscope-text {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.5rem;
-    color: white;
-    margin: 50px;
-    text-align: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 1.5rem;
+  color: white;
+  margin: 50px;
+  text-align: center;
 }
 
 .star {
-    position: absolute;
-    width: 2px;
-    height: 2px;
-    background: white;
-    border-radius: 50%;
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: white;
+  border-radius: 50%;
+}
+
+.dropdown-text {
+  cursor: pointer;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 1.2rem;
+  background: transparent;
+  border: solid white 1px;
+  padding: 10px;
+  color: white;
+  width: 30vw;
+}
+
+.dropdown-text:hover,
+.dropdown-text:focus {
+  background-color: #004e92;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content p {
+  padding: 5px;
+}
+
+.dropdown-content p:hover {
+  background-color: #004e92;
+  color: white;
+  cursor: pointer;
+}
+
+.show {
+  display: block;
 }
