--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1 {
   font-size: 3rem;
 }
 
-form {
+.container-input {
   display: flex;
   gap: 20px;
 }
@@ -88,12 +88,14 @@ form {
   display: none;
   position: absolute;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
+  border: white 1px solid;
   z-index: 1;
 }
 
 .dropdown-content p {
-  padding: 5px;
+  padding: 10px 15px;
+  color: white
 }
 
 .dropdown-content p:hover {
